@@ -44,13 +44,15 @@ import org.openremote.model.Container;
 import org.openremote.model.ContainerService;
 import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.*;
+import org.openremote.model.asset.impl.GatewayAsset;
 import org.openremote.model.asset.impl.GroupAsset;
 import org.openremote.model.asset.impl.ThingAsset;
+import org.openremote.model.asset.impl.UnknownAsset;
 import org.openremote.model.attribute.Attribute;
 import org.openremote.model.attribute.AttributeEvent;
 import org.openremote.model.attribute.AttributeMap;
-import org.openremote.model.event.shared.AssetInfo;
-import org.openremote.model.event.shared.EventRequestResponseWrapper;
+import org.openremote.model.event.Event;
+import org.openremote.model.event.RespondableEvent;
 import org.openremote.model.event.shared.EventSubscription;
 import org.openremote.model.event.shared.SharedEvent;
 import org.openremote.model.query.AssetQuery;
@@ -58,15 +60,15 @@ import org.openremote.model.query.LogicGroup;
 import org.openremote.model.query.filter.*;
 import org.openremote.model.security.ClientRole;
 import org.openremote.model.security.User;
+import org.openremote.model.util.LockByKey;
 import org.openremote.model.util.Pair;
 import org.openremote.model.util.TextUtil;
 import org.openremote.model.util.ValueUtil;
-import org.openremote.model.validation.AssetStateStore;
-import org.openremote.model.value.MetaItemType;
 import org.postgresql.util.PGobject;
 
 import java.sql.*;
 import java.util.*;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
@@ -76,12 +78,12 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
-import static java.util.logging.Level.FINE;
+import static java.util.logging.Level.*;
 import static java.util.stream.Collectors.groupingBy;
 import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
 import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
-import static org.openremote.manager.event.ClientEventService.CLIENT_INBOUND_QUEUE;
 import static org.openremote.model.attribute.Attribute.getAddedOrModifiedAttributes;
 import static org.openremote.model.query.AssetQuery.*;
 import static org.openremote.model.query.AssetQuery.Access.*;
@@ -153,15 +155,16 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                  return false;
              }
 
-             // Superuser can get events for any asset in any realm
-             if (auth != null && auth.isSuperUser()) {
-                 return true;
-             }
-
              AssetFilter<T> filter = (AssetFilter<T>) subscription.getFilter();
+
              if (filter == null) {
                  filter = new AssetFilter<>();
                  subscription.setFilter(filter);
+             }
+
+             // Superusers can get events for any asset in any realm
+             if (auth != null && auth.isSuperUser()) {
+                 return true;
              }
 
              requestRealm = filter.getRealm() != null ? filter.getRealm() : requestRealm;
@@ -187,24 +190,20 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
              filter.setRealm(realm);
 
-             if (!filter.isRestrictedEvents() && isRestricted) {
+             if (isRestricted) {
                  filter.setRestrictedEvents(true);
-             }
 
-             // Restricted user can only subscribe to assets they are linked to so go fetch these
-             // TODO: Update asset IDs when user asset links are modified
-             boolean skipAssetIdCheck = false;
-             if (isRestricted && (filter.getAssetIds() == null || filter.getAssetIds().length == 0)) {
-                 filter.setAssetIds(
+                 // Restricted user can only subscribe to assets they are linked to so go fetch these
+                 // TODO: Update asset IDs when user asset links are modified
+                 filter.setUserAssetIds(
                      assetStorageService.findUserAssetLinks(realm, userId, null)
                          .stream()
                          .map(userAssetLink -> userAssetLink.getId().getAssetId())
-                         .toArray(String[]::new)
+                         .toList()
                  );
-                 skipAssetIdCheck = true;
              }
 
-             if (!skipAssetIdCheck && filter.getAssetIds() != null) {
+             if (filter.getAssetIds() != null) {
                  // Client can subscribe to several assets
                  for (String assetId : filter.getAssetIds()) {
                      Asset<?> asset = assetStorageService.find(assetId, false);
@@ -213,7 +212,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                          return false;
                      if (isRestricted) {
                          // Restricted users can only get events for their linked assets
-                         if (!assetStorageService.isUserAsset(userId, assetId))
+                         if (!filter.getUserAssetIds().contains(assetId))
                              return false;
                      } else {
                          // Regular users can only get events for assets in their realm
@@ -232,6 +231,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     protected ManagerIdentityService identityService;
     protected ClientEventService clientEventService;
     protected GatewayService gatewayService;
+    protected ExecutorService executorService;
+    protected final LockByKey assetLocks = new LockByKey();
 
     /**
      * Will evaluate each {@link CalendarEventPredicate} and apply it depending on the {@link LogicGroup} type
@@ -317,6 +318,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         identityService = container.getService(ManagerIdentityService.class);
         clientEventService = container.getService(ClientEventService.class);
         gatewayService = container.getService(GatewayService.class);
+        executorService = container.getExecutor();
         EventSubscriptionAuthorizer assetEventAuthorizer = AssetStorageService.assetInfoAuthorizer(identityService, this);
 
         clientEventService.addSubscriptionAuthorizer((realm, auth, subscription) -> {
@@ -344,6 +346,12 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             return authorize && authorizeAssetQuery(((HasAssetQuery)event).getAssetQuery(), auth, realm);
         });
+
+        // TODO: Update once client event service supports interface subscriptions
+        clientEventService.addSubscription(ReadAssetEvent.class, this::onReadRequest);
+        clientEventService.addSubscription(ReadAssetsEvent.class, this::onReadRequest);
+        clientEventService.addSubscription(ReadAttributeEvent.class, this::onReadRequest);
+        clientEventService.addSubscription(ReadAssetTreeEvent.class, this::onReadAssetTreeRequest);
 
         container.getService(ManagerWebService.class).addApiSingleton(
             new AssetResourceImpl(
@@ -383,60 +391,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             .routeId("Persistence-Asset")
             .filter(isPersistenceEventForEntityType(Asset.class))
             .process(exchange -> publishModificationEvents(exchange.getIn().getBody(PersistenceEvent.class)));
-
-        // React if a client wants to read assets and attributes
-        from(CLIENT_INBOUND_QUEUE)
-            .routeId("ClientInbound-Query")
-            .filter(body().isInstanceOf(HasAssetQuery.class))
-            .process(exchange -> {
-                HasAssetQuery hasAssetQuery = exchange.getIn().getBody(HasAssetQuery.class);
-                AssetQuery assetQuery = hasAssetQuery.getAssetQuery();
-                String sessionKey = ClientEventService.getSessionKey(exchange);
-                String messageId = exchange.getIn().getHeader(ClientEventService.HEADER_REQUEST_RESPONSE_MESSAGE_ID, String.class);
-                Object response = null;
-
-                if (hasAssetQuery instanceof ReadAssetsEvent) {
-                    List<Asset<?>> assets = findAll(assetQuery);
-                    response = new AssetsEvent(assets);
-                } else {
-                    Asset<?> asset = find(assetQuery);
-                    String assetId;
-                    String attributeName = null;
-
-                    if (asset != null) {
-                        if (hasAssetQuery instanceof ReadAttributeEvent readAttributeEvent) {
-                            assetId = readAttributeEvent.getAttributeRef().getId();
-                            attributeName = readAttributeEvent.getAttributeRef().getName();
-                        } else {
-                            assetId = ((ReadAssetEvent) hasAssetQuery).getAssetId();
-                        }
-
-                        if (!TextUtil.isNullOrEmpty(attributeName)) {
-                            Attribute<?> assetAttribute = asset.getAttributes().get(attributeName).orElse(null);
-                            if (assetAttribute != null) {
-                                // Check access constraints
-                                if (assetQuery.access == null
-                                    || assetQuery.access == PRIVATE
-                                    || (assetQuery.access == PUBLIC && assetAttribute.getMetaValue(ACCESS_PUBLIC_READ).orElse(false))
-                                    || (assetQuery.access == PROTECTED && assetAttribute.getMetaValue(ACCESS_RESTRICTED_READ).orElse(false))) {
-                                    response = new AttributeEvent(assetId, attributeName, assetAttribute.getValue().orElse(null), assetAttribute.getTimestamp().orElse(0L));
-                                }
-                            }
-                        } else {
-                            response = new AssetEvent(AssetEvent.Cause.READ, asset, null);
-                        }
-                    }
-                }
-
-                if (response != null) {
-                    if (!isNullOrEmpty(messageId)) {
-                        response = new EventRequestResponseWrapper<>(messageId, (SharedEvent)response);
-                    }
-                    clientEventService.sendToSession(sessionKey, response);
-                }
-
-            })
-            .end();
     }
 
     /**
@@ -521,7 +475,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     }
 
     /**
-     * @param loadComplete If the whole asset data (including path and attributes) should be loaded.
+     * @param loadComplete If the whole asset data (including attributes) should be loaded.
      */
     public Asset<?> find(String assetId, boolean loadComplete) {
         if (assetId == null)
@@ -569,7 +523,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         List<Asset<?>> result = findAll(em, query);
         if (result.isEmpty())
             return null;
-        return result.get(0);
+        return result.getFirst();
     }
 
     public List<Asset<?>> findAll(AssetQuery query) {
@@ -614,7 +568,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
      * @throws IllegalArgumentException if the realm or parent is illegal, or other asset constraint is violated.
      */
     public <T extends Asset<?>> T merge(T asset, boolean overrideVersion) throws IllegalStateException, ConstraintViolationException {
-        return merge(asset, overrideVersion, false, null);
+        return merge(asset, overrideVersion, null, null);
     }
 
     /**
@@ -623,35 +577,48 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
      * @throws IllegalArgumentException if the realm or parent is illegal, or other asset constraint is violated.
      */
     public <T extends Asset<?>> T merge(T asset, String userName) throws IllegalStateException, ConstraintViolationException {
-        return merge(asset, false, false, userName);
+        return merge(asset, false, null, userName);
     }
 
     /**
      * Merge the requested {@link Asset} checking that it meets all constraint requirements before doing so; the
      * timestamp of each {@link Attribute} will also be updated to the current system time if it has changed to assist
      * with {@link Attribute} equality (see {@link Attribute#equals}).
-     * @param overrideVersion If <code>true</code>, the merge will override the data in the database, independent of
-     *                        version.
-     * @param skipGatewayCheck Don't check if asset is a gateway asset and merge asset into local persistence service.
-     * @param userName        the user which this asset needs to be assigned to.
+     * @param overrideVersion        If <code>true</code>, the merge will override the data in the database, independent of
+     *                               version.
+     * @param requestingGatewayAsset If set this is the {@link GatewayAsset} merging the asset so skip standard checks
+     * @param userName               the user which this asset needs to be assigned to.
      * @return The current stored asset state.
      * @throws IllegalArgumentException if the realm or parent is illegal, or other asset constraint is violated.
      */
     @SuppressWarnings("unchecked")
-    public <T extends Asset<?>> T merge(T asset, boolean overrideVersion, boolean skipGatewayCheck, String userName) throws IllegalStateException, ConstraintViolationException {
+    public <T extends Asset<?>> T merge(T asset, boolean overrideVersion, GatewayAsset requestingGatewayAsset, String userName) throws IllegalStateException, ConstraintViolationException {
 
         if (LOG.isLoggable(Level.FINEST)) {
             LOG.finest("Merging asset: " + asset);
         }
 
-        return persistenceService.doReturningTransaction(em -> {
+        long startTime = System.currentTimeMillis();
+        String assetId = asset.getId() != null ? asset.getId() : "";
 
-            long startTime = System.currentTimeMillis();
-            String gatewayId = gatewayService.getLocallyRegisteredGatewayId(asset.getId(), asset.getParentId());
+        // We skip all standard checks as asset is coming from a gateway and would be validated from there
+        if (requestingGatewayAsset != null) {
+            if (asset.getId() == null || asset.getParentId() == null || asset.getRealm() == null) {
+                String msg = "GatewayAsset descendant must have an ID, parent ID and realm defined: asset=" + asset;
+                LOG.warning(msg);
+                throw new IllegalStateException(msg);
+            }
+        } else {
+            String gatewayId = null;
 
-            if (!skipGatewayCheck && gatewayId != null) {
-                LOG.fine("Sending asset merge request to gateway: Gateway ID=" + gatewayId);
-                return gatewayService.mergeGatewayAsset(gatewayId, asset);
+            if (asset.getId() != null || asset.getParentId() != null) {
+                gatewayId = gatewayService.getLocallyRegisteredGatewayId(asset.getId(), asset.getParentId());
+            }
+
+            if (gatewayId != null) {
+                String msg = "Cannot directly add or modify a descendant asset on a gateway asset, do this on the gateway itself: Gateway ID=" + gatewayId;
+                LOG.info(msg);
+                throw new IllegalStateException(msg);
             }
 
             // Validate realm
@@ -662,6 +629,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             }
 
             // Do standard JSR-380 validation on the asset (includes custom validation using descriptors and constraints)
+            // Only do validation on non gateway descendants as the asset types in the central instance may not
+            // match the edge gateway
             Set<ConstraintViolation<Asset<?>>> validationFailures = ValueUtil.validate(asset);
 
             if (!validationFailures.isEmpty()) {
@@ -670,6 +639,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 LOG.log(Level.WARNING, msg + ", exception=" + ex.getMessage());
                 throw ex;
             }
+        }
+
+        return withAssetLock(assetId, () -> persistenceService.doReturningTransaction(em -> {
 
             T existingAsset = TextUtil.isNullOrEmpty(asset.getId()) ? null : (T)em.find(Asset.class, asset.getId());
 
@@ -773,14 +745,14 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             }
 
             // Validate group child asset type attribute
-            if (asset instanceof GroupAsset) {
-                String childAssetType = ((GroupAsset)asset).getChildAssetType()
-                    .map(childAssetTypeString -> TextUtil.isNullOrEmpty(childAssetTypeString) ? null : childAssetTypeString)
-                    .orElseThrow(() -> {
-                        String msg = "Asset of type GROUP childAssetType attribute must be a valid string: asset=" + asset;
-                        LOG.warning(msg);
-                        return new IllegalStateException(msg);
-                    });
+            if (asset instanceof GroupAsset groupAsset) {
+
+                // Ensure the asset has a childAssetType (set to empty if missing)
+                String childAssetType = groupAsset.getChildAssetType()
+                        .orElseGet(() -> {
+                            groupAsset.setChildAssetType(""); // Set empty on the asset
+                            return "";
+                        });
 
                 String existingChildAssetType = existingAsset != null ? ((GroupAsset)existingAsset)
                     .getChildAssetType()
@@ -790,7 +762,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         return new IllegalStateException(msg);
                     }) : childAssetType;
 
-                if (!childAssetType.equals(existingChildAssetType)) {
+                if (!childAssetType.isEmpty() && !existingChildAssetType.isEmpty() && !childAssetType.equals(existingChildAssetType)) {
                     String msg = "Asset of type GROUP so childAssetType attribute cannot be changed: asset=" + asset;
                     LOG.warning(msg);
                     throw new IllegalStateException(msg);
@@ -817,7 +789,20 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 }
             }
 
-            T updatedAsset = em.merge(asset);
+            T updatedAsset;
+
+            if (existingAsset instanceof UnknownAsset && !(asset instanceof UnknownAsset)) {
+                // This occurs when an existing asset is merged but the type is unknown
+                // We'll copy updates into existing asset
+                existingAsset.setAttributes(asset.getAttributes());
+                existingAsset.setName(asset.getName());
+                existingAsset.setVersion(asset.getVersion());
+                existingAsset.setParentId(asset.getParentId());
+                existingAsset.setAccessPublicRead(asset.isAccessPublicRead());
+                updatedAsset = em.merge(existingAsset);
+            } else {
+                updatedAsset = em.merge(asset);
+            }
 
             if (LOG.isLoggable(FINE)) {
                 LOG.fine("Asset merge took: " + (System.currentTimeMillis() - startTime) + "ms");
@@ -838,7 +823,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             }
 
             return updatedAsset;
-        });
+        }));
     }
 
     /**
@@ -851,9 +836,17 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     public boolean delete(List<String> assetIds, boolean skipGatewayCheck) {
 
         List<String> ids = new ArrayList<>(assetIds);
-        Map<String, List<String>> gatewayIdAssetIdMap = new HashMap<>();
 
         if (!skipGatewayCheck) {
+
+            // Don't allow deletion of gateway descendant assets (they must be deleted on the gateway itself)
+            boolean gatewayDescendant = ids.stream().anyMatch(id -> gatewayService.getLocallyRegisteredGatewayId(id, null) != null);
+            if (gatewayDescendant) {
+                String msg = "Cannot delete one or more requested assets as they are descendants of a gateway asset";
+                LOG.info(msg);
+                throw new IllegalStateException(msg);
+            }
+
             List<String> gatewayIds = ids.stream().filter(id -> gatewayService.isLocallyRegisteredGateway(id)).toList();
 
             if (!gatewayIds.isEmpty()) {
@@ -866,76 +859,40 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                             return false;
                         }
                     } catch (Exception e) {
+                        LOG.log(WARNING, "Failed to delete gateway asset: " + gatewayId, e);
                         return false;
                     }
                 }
             }
+        }
 
-            ids.removeIf(id -> {
-                String gatewayId = gatewayService.getLocallyRegisteredGatewayId(id, null);
-                if (gatewayId != null) {
+        if (!ids.isEmpty()) {
+            try {
+                // Get locks for each asset ID
+                ids.forEach(assetLocks::lock);
 
-                    if (gatewayIds.contains(gatewayId)) {
-                        // Gateway is being deleted so no need to try and delete this descendant asset
-                        return true;
+                persistenceService.doTransaction(em -> {
+                    List<Asset<?>> assets = em
+                        .createQuery("select a from Asset a where not exists(select child.id from Asset child where child.parentId = a.id and not child.id in :ids) and a.id in :ids", Asset.class)
+                        .setParameter("ids", ids)
+                        .getResultList().stream().map(asset -> (Asset<?>) asset).collect(Collectors.toList());
+
+                    if (ids.size() != assets.size()) {
+                        throw new IllegalArgumentException("Cannot delete one or more requested assets as they either have children or don't exist");
                     }
 
-                    gatewayIdAssetIdMap.compute(gatewayId, (gId, aIds) -> {
-                        if (aIds == null) {
-                            aIds = new ArrayList<>();
-                        }
-                        aIds.add(id);
-                        return aIds;
-                    });
-                    return true;
-                }
+                    assets.sort(Comparator.comparingInt((Asset<?> asset) -> asset.getPath() == null ? 0 : asset.getPath().length).reversed());
+                    assets.forEach(em::remove);
+                    em.flush();
+                });
+            } catch (Exception e) {
+                LOG.log(SEVERE, "Failed to delete one or more requested assets: " + Arrays.toString(assetIds.toArray()), e);
                 return false;
-            });
-
-            if (gatewayIdAssetIdMap.isEmpty() && ids.isEmpty()) {
-                return true;
-            }
-
-            // This is not atomic across gateways
-            if (!gatewayIdAssetIdMap.isEmpty()) {
-                for (Map.Entry<String, List<String>> gatewayIdAssetIds : gatewayIdAssetIdMap.entrySet()) {
-                    String gatewayId = gatewayIdAssetIds.getKey();
-                    List<String> gatewayAssetIds = gatewayIdAssetIds.getValue();
-                    try {
-                        boolean deleted = gatewayService.deleteGatewayAssets(gatewayId, gatewayAssetIds);
-                        if (!deleted) {
-                            return false;
-                        }
-                    } catch (Exception e) {
-                        return false;
-                    }
-                }
-
-                if (ids.isEmpty()) {
-                    return true;
-                }
+            } finally {
+                // Release all of the locks
+                ids.forEach(assetLocks::unlock);
             }
         }
-
-        try {
-            persistenceService.doTransaction(em -> {
-                List<Asset<?>> assets = em
-                    .createQuery("select a from Asset a where not exists(select child.id from Asset child where child.parentId = a.id and not child.id in :ids) and a.id in :ids", Asset.class)
-                    .setParameter("ids", ids)
-                    .getResultList().stream().map(asset -> (Asset<?>) asset).collect(Collectors.toList());
-
-                if (assetIds.size() != assets.size()) {
-                    throw new IllegalArgumentException("Cannot delete one or more requested assets as they either have children or don't exist");
-                }
-
-                assets.sort(Comparator.comparingInt((Asset<?> asset) -> asset.getPath() == null ? 0 : asset.getPath().length).reversed());
-                assets.forEach(em::remove);
-                em.flush();
-            });
-        } catch (Exception e) {
-            return false;
-        }
-
         return true;
     }
 
@@ -1053,6 +1010,65 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         }));
     }
 
+    /**
+     * Returns a map of asset IDs with the respective hasChildren flag.
+     * 
+     * It check whether any of the assetIds is set as a parentId in the Asset table.
+     * 
+     * @param assetIds The list of asset IDs to check.
+     * @return A map of asset IDs with the respective hasChildren flag.
+     */
+    public Map<String, Boolean> hasChildren(List<String> assetIds) {
+        return persistenceService.doReturningTransaction(entityManager -> {
+            // Get all parent IDs that have children
+            List<String> parentsWithChildren = entityManager.createQuery(
+                "select distinct a.parentId from Asset a where a.parentId in :assetIds", String.class)
+                .setParameter("assetIds", assetIds)
+                .getResultList();
+
+            // Build map: assetId -> hasChildren
+            return assetIds.stream()
+                .collect(Collectors.toMap(
+                    id -> id,
+                    parentsWithChildren::contains
+                ));
+        });
+    }
+
+
+    public AssetTree queryAssetTree(AssetQuery query) {
+        List<Asset<?>> assets;
+        boolean hasMore = false;
+    
+        // determine `hasMore` flag
+        if (query.limit > 0) {
+            int originalLimit = query.limit;
+            query.limit = originalLimit + 1; // extend by 1
+            
+            try {
+                assets = findAll(query);
+            } finally {
+                query.limit = originalLimit; // restore limit
+            }
+
+            // hasMore is true if there are more assets beyond the original limit bound
+            hasMore = assets.size() > originalLimit;
+            if (hasMore) {
+                // keep only the assets within the original limit bound
+                assets = assets.subList(0, originalLimit);
+            }
+        } else {
+            assets = findAll(query);
+        }
+    
+        // Get the hasChildren flags
+        Map<String, Boolean> hasChildren = assets.isEmpty()
+        ? Collections.emptyMap()
+        : hasChildren(assets.stream().map(Asset::getId).collect(Collectors.toList()));
+
+        return new AssetTree(assets, hasMore, hasChildren);
+    }
+    
     public List<UserAssetLink> findUserAssetLinks(String realm, String userId, String assetId) {
         return findUserAssetLinks(
             realm,
@@ -1060,7 +1076,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             assetId != null ? Collections.singletonList(assetId) : null);
     }
 
-    public List<UserAssetLink> findUserAssetLinks(String realm, List<String> userIds, List<String> assetIds) {
+    public List<UserAssetLink> findUserAssetLinks(String realm, Collection<String> userIds, Collection<String> assetIds) {
 
         if (realm == null && (userIds == null || userIds.isEmpty()) && (assetIds == null || assetIds.isEmpty())) {
             return Collections.emptyList();
@@ -1070,7 +1086,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             buildFindUserAssetLinksQuery(em, realm, userIds, assetIds).getResultList());
     }
 
-    protected TypedQuery<UserAssetLink> buildFindUserAssetLinksQuery(EntityManager em, String realm, List<String> userIds, List<String> assetIds) {
+    protected TypedQuery<UserAssetLink> buildFindUserAssetLinksQuery(EntityManager em, String realm, Collection<String> userIds, Collection<String> assetIds) {
         StringBuilder sb = new StringBuilder();
         Map<String, Object> parameters = new HashMap<>(3);
         sb.append("select ua from UserAssetLink ua where 1=1");
@@ -1206,6 +1222,15 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         });
     }
 
+    public <R> R withAssetLock(String assetId, Supplier<R> action) {
+        try {
+            assetLocks.lock(assetId);
+            return action.get();
+        } finally {
+            assetLocks.unlock(assetId);
+        }
+    }
+
     protected void createUserAssetLinks(EntityManager em, List<UserAssetLink> userAssets) {
 
         em.unwrap(Session.class).doWork(connection -> {
@@ -1282,9 +1307,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         if (query.userIds != null && query.userIds.length == 0) {
             return Collections.emptyList();
         }
-        if (query.parents != null && query.parents.length == 0) {
-            return Collections.emptyList();
-        }
 
         // Default to order by creation date if the query may return multiple results
         if (query.orderBy == null && query.ids == null)
@@ -1331,8 +1353,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             return assets.stream().filter(asset -> calendarEventPredicateMatches(timerService::getCurrentTimeMillis, query, asset)).toList();
         }
 
-        if (LOG.isLoggable(FINE)) {
-            LOG.fine("Asset query took " + (System.currentTimeMillis() - startMillis) + "ms: return count=" + assets.size());
+        if (LOG.isLoggable(FINEST)) {
+            LOG.finest("Asset query took " + (System.currentTimeMillis() - startMillis) + "ms: return count=" + assets.size());
         }
 
         return assets;
@@ -1343,48 +1365,37 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
      * generate the {@link AttributeEvent}
      */
     @SuppressWarnings("unchecked")
-    protected boolean updateAttributeValue(EntityManager em, Asset<?> asset, Attribute<?> attribute) throws ConstraintViolationException {
+    protected boolean updateAttributeValue(EntityManager em, AttributeEvent event) throws ConstraintViolationException {
 
-        long timestamp = attribute.getTimestamp().orElseGet(timerService::getCurrentTimeMillis);
-
-        // TODO: Reuse AssetState and change validator over to that class
-        // Do standard JSR-380 validation on the new value (needs attribute descriptor to do this)
-        Set<ConstraintViolation<AssetStateStore>> validationFailures = ValueUtil.validate(new AssetStateStore(asset.getType(), attribute));
-
-        if (!validationFailures.isEmpty()) {
-            String msg = "Attribute update failed as value failed constraint validation: attribute=" + attribute;
-            ConstraintViolationException ex = new ConstraintViolationException(validationFailures);
-            LOG.log(Level.WARNING, msg + ", exception=" + ex.getMessage());
-            throw ex;
-        }
+        long timestamp = event.getTimestamp() > 0 ? event.getTimestamp() : timerService.getCurrentTimeMillis();
 
         try {
             PGobject valueTimestampJSON = new PGobject();
             valueTimestampJSON.setType("jsonb");
-            valueTimestampJSON.setValue("{\"value\":" + ValueUtil.asJSON(attribute.getValue().orElse(null)).orElse(ValueUtil.NULL_LITERAL) + ",\"timestamp\":" + timestamp + "}");
+            valueTimestampJSON.setValue("{\"value\":" + ValueUtil.asJSON(event.getValue().orElse(null)).orElse(ValueUtil.NULL_LITERAL) + ",\"timestamp\":" + timestamp + "}");
 
             // TODO: Use jsonb type directly to optimise over wire data (couldn't get this to work even after seeing https://stackoverflow.com/questions/53847917/postgresql-throws-column-is-of-type-jsonb-but-expression-is-of-type-bytea-with)
             Query query = em.createNativeQuery("UPDATE asset SET attributes[?] = attributes[?] || ?\\:\\:jsonb where id = ?")
-                .setParameter(1, attribute.getName())
-                .setParameter(2, attribute.getName())
-                .setParameter(3, "{\"value\":" + ValueUtil.asJSON(attribute.getValue().orElse(null)).orElse(ValueUtil.NULL_LITERAL) + ",\"timestamp\":" + timestamp + "}")
-                .setParameter(4, asset.getId());
+                .setParameter(1, event.getName())
+                .setParameter(2, event.getName())
+                .setParameter(3, "{\"value\":" + ValueUtil.asJSON(event.getValue().orElse(null)).orElse(ValueUtil.NULL_LITERAL) + ",\"timestamp\":" + timestamp + "}")
+                .setParameter(4, event.getId());
 
             int affectedRows = query.executeUpdate();
             boolean success = affectedRows == 1;
 
             if (success) {
                 if (LOG.isLoggable(Level.FINEST)) {
-                    LOG.finest("Updated attribute value assetID=" + asset.getId() + ", attributeName=" + attribute.getName() + ", timestamp=" + timestamp);
+                    LOG.finest("Updated attribute value assetID=" + event.getId() + ", attributeName=" + event.getName() + ", timestamp=" + timestamp);
                 }
             } else {
                 if (LOG.isLoggable(Level.FINE)) {
-                    LOG.fine("Failed to update attribute value assetID=" + asset.getId() + ", attributeName=" + attribute.getName() + ", timestamp=" + timestamp);
+                    LOG.fine("Failed to update attribute value assetID=" + event.getId() + ", attributeName=" + event.getName() + ", timestamp=" + timestamp);
                 }
             }
 
             if (success) {
-                publishAttributeEvent(asset, attribute);
+                clientEventService.publishEvent(event);
             }
 
             return success;
@@ -1393,22 +1404,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             LOG.log(Level.WARNING, "Failed to store attribute value", e);
             return false;
         }
-    }
-
-    protected void publishAttributeEvent(Asset<?> asset, Attribute<?> attribute) {
-        clientEventService.publishEvent(
-            new AttributeEvent(
-                asset.getId(),
-                attribute.getName(),
-                attribute.getValue().orElse(null),
-                attribute.getTimestamp().orElse(timerService.getCurrentTimeMillis())
-            )
-                .setParentId(asset.getParentId())
-                .setRealm(asset.getRealm())
-                .setPath(asset.getPath())
-                .setAccessRestrictedRead(attribute.getMetaValue(MetaItemType.ACCESS_RESTRICTED_READ).orElse(false))
-                .setAccessPublicRead(attribute.getMetaValue(MetaItemType.ACCESS_PUBLIC_READ).orElse(false))
-        );
     }
 
     protected void publishModificationEvents(PersistenceEvent<Asset<?>> persistenceEvent) {
@@ -1428,41 +1423,35 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 clientEventService.publishEvent(
                     new AssetEvent(AssetEvent.Cause.CREATE, loadedAsset, null)
                 );
+
+                // Raise attribute event for each created attribute
+                asset.getAttributes().forEach(newAttribute ->
+                    clientEventService.publishEvent(
+                        new AttributeEvent(
+                            asset,
+                            newAttribute,
+                            getClass().getSimpleName(),
+                            newAttribute.getValue().orElse(null),
+                            newAttribute.getTimestamp().orElse(0L),
+                            newAttribute.getValue().orElse(null),
+                            newAttribute.getTimestamp().orElse(0L))
+                                .setSource(getClass().getSimpleName())
+                    ));
             }
-
-//                // Raise attribute event for each attribute
-//                asset.getAttributes().forEach(newAttribute ->
-//                    clientEventService.publishEvent(
-//                        new AttributeEvent(asset.getId(),
-//                            newAttribute.getName(),
-//                            newAttribute.getValue().orElse(null),
-//                            newAttribute.getTimestamp().orElse(timerService.getCurrentTimeMillis()))
-//                            .setParentId(asset.getParentId()).setRealm(asset.getRealm())
-//                    ));
             case UPDATE -> {
+                boolean nonAttributeChange = persistenceEvent.getPropertyNames().size() > 1 || !persistenceEvent.hasPropertyChanged("attributes");
                 boolean attributesChanged = persistenceEvent.hasPropertyChanged("attributes");
+                LOG.finest(() -> "Asset updated: " + persistenceEvent);
 
-//                String[] updatedProperties = Arrays.stream(persistenceEvent.getPropertyNames()).filter(propertyName -> {
-//                    Object oldValue = persistenceEvent.getPreviousState(propertyName);
-//                    Object newValue = persistenceEvent.getCurrentState(propertyName);
-//                    return !Objects.deepEquals(oldValue, newValue);
-//                }).toArray(String[]::new);
-
-                // Fully load the asset
-                Asset<?> loadedAsset = find(new AssetQuery().ids(asset.getId()));
-                if (loadedAsset == null) {
-                    return;
-                }
-                LOG.finest("Asset updated: " + persistenceEvent);
                 clientEventService.publishEvent(
-                    new AssetEvent(AssetEvent.Cause.UPDATE, loadedAsset, persistenceEvent.getPropertyNames().toArray(String[]::new))
+                    new AssetEvent(AssetEvent.Cause.UPDATE, asset, persistenceEvent.getPropertyNames().toArray(String[]::new))
                 );
 
-                // Did any attributes change if so raise attribute events on the event bus
-                if (attributesChanged) {
-                    AttributeMap oldAttributes = persistenceEvent.getPreviousState("attributes");
-                    AttributeMap newAttributes = persistenceEvent.getCurrentState("attributes");
+                AttributeMap oldAttributes = attributesChanged ? persistenceEvent.getPreviousState("attributes") : asset.getAttributes();
+                AttributeMap newAttributes = attributesChanged ? persistenceEvent.getCurrentState("attributes") : asset.getAttributes();
 
+                // Publish events for deleted attributes
+                if (attributesChanged) {
                     // Get removed attributes and raise an attribute event with deleted flag in attribute state
                     oldAttributes.stream()
                         .filter(oldAttribute ->
@@ -1471,16 +1460,35 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                             ))
                         .forEach(obsoleteAttribute ->
                             clientEventService.publishEvent(
-                                AttributeEvent.deletedAttribute(asset.getId(), obsoleteAttribute.getName())
+                                new AttributeEvent(asset, obsoleteAttribute, getClass().getSimpleName(), null, timerService.getCurrentTimeMillis(), null, 0L)
+                                    .setSource(getClass().getSimpleName())
+                                    .setDeleted(true)
                             ));
-
-                    // Get new or modified attributes
-                    getAddedOrModifiedAttributes(oldAttributes.values(),
-                        newAttributes.values())
-                        .forEach(newOrModifiedAttribute ->
-                            publishAttributeEvent(asset, newOrModifiedAttribute)
-                        );
                 }
+
+                Stream<Attribute<?>> attributeStream;
+
+                if (nonAttributeChange) {
+                    // If something other than attributes has changed then treat as if attributes changed as path etc could have changed
+                    attributeStream = newAttributes.values().stream();
+                } else {
+                    // Get new or modified attributes
+                    attributeStream = getAddedOrModifiedAttributes(oldAttributes.values(), newAttributes.values());
+                }
+
+                attributeStream
+                    .forEach(newOrModifiedAttribute -> {
+                        Optional<Attribute<?>> oldAttribute = oldAttributes.get(newOrModifiedAttribute.getName());
+                        clientEventService.publishEvent(new AttributeEvent(
+                            asset,
+                            newOrModifiedAttribute,
+                            getClass().getSimpleName(),
+                            newOrModifiedAttribute.getValue().orElse(null),
+                            newOrModifiedAttribute.getTimestamp().orElse(0L),
+                            oldAttribute.flatMap(Attribute::getValue).orElse(null),
+                            oldAttribute.flatMap(Attribute::getTimestamp).orElse(0L)
+                        ).setSource(getClass().getSimpleName()));
+                    });
             }
             case DELETE -> {
                 if (LOG.isLoggable(Level.FINEST)) {
@@ -1496,7 +1504,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 AttributeMap deletedAttributes = asset.getAttributes();
                 deletedAttributes.forEach(obsoleteAttribute ->
                     clientEventService.publishEvent(
-                        AttributeEvent.deletedAttribute(asset.getId(), obsoleteAttribute.getName())
+                        new AttributeEvent(asset, obsoleteAttribute, getClass().getSimpleName(), null, timerService.getCurrentTimeMillis(), null, 0L)
+                            .setSource(getClass().getSimpleName())
+                            .setDeleted(true)
                     ));
             }
         }
@@ -1534,6 +1544,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         sb.append(buildOrderByString(query));
         sb.append(buildLimitString(query));
+        sb.append(buildOffsetString(query));
         return new Pair<>(new PreparedAssetQuery(sb.toString(), binders), containsCalendarPredicate);
     }
 
@@ -1653,6 +1664,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return "";
     }
 
+    protected static String buildOffsetString(AssetQuery query) {
+        if (query.offset > 0) {
+            return " OFFSET " + query.offset;
+        }
+        return "";
+    }
+
     protected static boolean appendWhereClause(StringBuilder sb, AssetQuery query, int level, List<ParameterBinder> binders, Supplier<Long> timeProvider) {
         // level = 1 is main query
         // level = 2 is union
@@ -1694,27 +1712,32 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         if (query.parents != null) {
 
             sb.append(" and (");
-            boolean isFirst = true;
 
-            for (ParentPredicate pred : query.parents) {
-                if (!isFirst) {
-                    sb.append(" or (");
-                } else {
-                    sb.append("(");
+            if(query.parents.length == 0) {
+                sb.append("A.PARENT_ID is null");
+            } else {
+                boolean isFirst = true;
+
+                for (ParentPredicate pred : query.parents) {
+                    if (!isFirst) {
+                        sb.append(" or (");
+                    } else {
+                        sb.append("(");
+                    }
+                    isFirst = false;
+
+                    if (level == 1 && pred.id != null) {
+                        final int pos = binders.size() + 1;
+                        sb.append("A.PARENT_ID = ?").append(pos);
+                        binders.add((em, st) -> st.setParameter(pos, pred.id));
+                    } else if (level == 1) {
+                        sb.append("A.PARENT_ID is null");
+                    } else {
+                        sb.append("true");
+                    }
+
+                    sb.append(")");
                 }
-                isFirst = false;
-
-                if (level == 1 && pred.id != null) {
-                    final int pos = binders.size() + 1;
-                    sb.append("A.PARENT_ID = ?").append(pos);
-                    binders.add((em, st) -> st.setParameter(pos, pred.id));
-                } else if (level == 1) {
-                    sb.append("A.PARENT_ID is null");
-                } else {
-                    sb.append("true");
-                }
-
-                sb.append(")");
             }
 
             sb.append(")");
@@ -1748,7 +1771,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 binders.add((em, st) -> st.setParameter(pos, query.userIds));
             }
 
-            if (level == 1 && query.access == Access.PUBLIC) {
+            if (query.access == Access.PUBLIC) {
                 sb.append(" and A.ACCESS_PUBLIC_READ is true");
             }
 
@@ -1846,7 +1869,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
                 if (attributePredicate.meta != null && attributePredicate.meta.length > 0) {
                     String metaJsonObjName = jsonObjName + "_AM" + metaIndex++;
-                    selectInserter.accept(" LEFT JOIN jsonb_each(" + jsonObjName + ".VALUE #> '{meta}') as " + metaJsonObjName + " ON true");
+                    selectInserter.accept(" LEFT JOIN jsonb_each(jsonb_strip_nulls(" + jsonObjName + ".VALUE) #> '{meta}') as " + metaJsonObjName + " ON true");
                     sb.append(" and (");
                     addNameValuePredicates(Arrays.asList(attributePredicate.meta.clone()), sb, binders, metaJsonObjName, selectInserter, true, timeProvider);
                     sb.append(")");
@@ -2137,5 +2160,76 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         }
 
         throw new IllegalArgumentException("Unsupported operator: " + operator);
+    }
+
+    protected <T extends HasAssetQuery & RespondableEvent> void onReadAssetTreeRequest(ReadAssetTreeEvent event) {
+        Event response = null;
+
+        if (event.getResponseConsumer() == null) {
+            LOG.warning("Cannot respond to read asset tree request event as response consumer is not set");
+            return;
+        }
+
+        // Create the asset tree and event
+        AssetTree assetTree = queryAssetTree(event.getAssetQuery());
+        response = new AssetTreeEvent(assetTree);
+
+        // Respond to the read asset tree request
+        if (response != null) {
+            if (!isNullOrEmpty(((SharedEvent) event).getMessageID())) {
+                response.setMessageID(((SharedEvent) event).getMessageID());
+            }
+            event.getResponseConsumer().accept(response);
+        }
+    }
+
+    protected <T extends HasAssetQuery & RespondableEvent> void onReadRequest(T event) {
+        AssetQuery assetQuery = event.getAssetQuery();
+        Event response = null;
+
+        if (event.getResponseConsumer() == null) {
+            LOG.warning("Cannot respond to read request event as response consumer is not set");
+            return;
+        }
+
+        if (event instanceof ReadAssetsEvent) {
+            List<Asset<?>> assets = findAll(assetQuery);
+            response = new AssetsEvent(assets);
+        } else {
+            Asset<?> asset = find(assetQuery);
+            String assetId;
+            String attributeName = null;
+
+            if (asset != null) {
+                if (event instanceof ReadAttributeEvent readAttributeEvent) {
+                    assetId = readAttributeEvent.getAttributeRef().getId();
+                    attributeName = readAttributeEvent.getAttributeRef().getName();
+                } else {
+                    assetId = ((ReadAssetEvent) event).getAssetId();
+                }
+
+                if (!TextUtil.isNullOrEmpty(attributeName)) {
+                    Attribute<?> assetAttribute = asset.getAttributes().get(attributeName).orElse(null);
+                    if (assetAttribute != null) {
+                        // Check access constraints
+                        if (assetQuery.access == null
+                            || assetQuery.access == PRIVATE
+                            || (assetQuery.access == PUBLIC && assetAttribute.getMetaValue(ACCESS_PUBLIC_READ).orElse(false))
+                            || (assetQuery.access == PROTECTED && assetAttribute.getMetaValue(ACCESS_RESTRICTED_READ).orElse(false))) {
+                            response = new AttributeEvent(assetId, attributeName, assetAttribute.getValue().orElse(null), assetAttribute.getTimestamp().orElse(0L));
+                        }
+                    }
+                } else {
+                    response = new AssetEvent(AssetEvent.Cause.READ, asset, null);
+                }
+            }
+        }
+
+        if (response != null) {
+            if (!isNullOrEmpty(((SharedEvent) event).getMessageID())) {
+                response.setMessageID(((SharedEvent) event).getMessageID());
+            }
+            event.getResponseConsumer().accept(response);
+        }
     }
 }
